[gd_scene load_steps=9 format=3 uid="uid://bnm0ryn62bf84"]

[ext_resource type="Texture2D" uid="uid://bxhxh2246oebe" path="res://assets/ui/you_win/bg.png" id="1_ss3wr"]
[ext_resource type="Script" path="res://scripts/level_win_splash.gd" id="2_u2e1m"]
[ext_resource type="Texture2D" uid="uid://ba0l2ws4x85rj" path="res://assets/ui/you_win/table.png" id="2_wqjo0"]
[ext_resource type="Texture2D" uid="uid://b3f17csxk0obb" path="res://assets/ui/you_win/header.png" id="3_c8ffo"]
[ext_resource type="Texture2D" uid="uid://c6meayj4hp8eo" path="res://assets/ui/upgrade/star.png" id="4_hdxnb"]

[sub_resource type="Animation" id="Animation_h2b00"]
resource_name = "FadeIn"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_m4gd8"]
resource_name = "FadeOut"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1e-05, 1e-05)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cym12"]
_data = {
"FadeIn": SubResource("Animation_h2b00"),
"FadeOut": SubResource("Animation_m4gd8")
}

[node name="LevelWinSplash" type="TextureRect"]
anchors_preset = -1
anchor_right = 0.258473
anchor_bottom = 0.195312
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(75, 100)
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("1_ss3wr")
expand_mode = 3
stretch_mode = 5
script = ExtResource("2_u2e1m")
metadata/_edit_use_anchors_ = true

[node name="Table" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0268672
anchor_top = 0.09
anchor_right = 0.897432
anchor_bottom = 0.74
texture = ExtResource("2_wqjo0")
expand_mode = 3
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="Stars" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.120902
anchor_top = 0.14
anchor_right = 0.792583
anchor_bottom = 0.365
metadata/_edit_use_anchors_ = true

[node name="Star1" type="TextureRect" parent="Stars"]
modulate = Color(0.392157, 0.392157, 0.392157, 1)
z_index = 1
layout_mode = 0
anchor_top = 0.0666667
anchor_right = 0.490385
anchor_bottom = 0.955556
pivot_offset = Vector2(25, 20)
texture = ExtResource("4_hdxnb")
expand_mode = 3
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="Star2" type="TextureRect" parent="Stars"]
modulate = Color(0.392157, 0.392157, 0.392157, 1)
z_index = 2
layout_mode = 0
anchor_left = 0.25
anchor_top = -0.0444444
anchor_right = 0.740385
anchor_bottom = 0.844444
pivot_offset = Vector2(25, 20)
texture = ExtResource("4_hdxnb")
expand_mode = 3
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="Star3" type="TextureRect" parent="Stars"]
modulate = Color(0.392157, 0.392157, 0.392157, 1)
z_index = 1
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.0666667
anchor_right = 0.990385
anchor_bottom = 0.955556
pivot_offset = Vector2(25, 20)
texture = ExtResource("4_hdxnb")
expand_mode = 3
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="Header" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0604512
anchor_top = -0.09
anchor_right = 1.01424
anchor_bottom = 0.21
texture = ExtResource("3_c8ffo")
expand_mode = 3
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="Animations" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_cym12")
}

[connection signal="animation_finished" from="Animations" to="." method="_on_animations_animation_finished"]
